# screaming-frog-mcp

./: README.md  pyproject.toml
commands/: analyze-crawl.md
src/screaming_frog_mcp/: server.py
